--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,6 @@ parking_lot = "0.12"
 reqwest = { version = "0.11", features = ["json"] }
 thiserror = "1"
 dotenv_codegen = "0.15"
+
+random-number = "0.1.7"
+getrandom = { version = "0.2.6", features = ["js"] }
