--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,3 +26,4 @@ dotenv_codegen = "0.15"
 
 random-number = "0.1.7"
 getrandom = { version = "0.2.6", features = ["js"] }
+uuid = { version = "1.0.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
