--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,12 +12,20 @@ mock = []
 yew = "0.19"
 yew-router = "0.16"
 yew-hooks = "0.1"
+yew-agent = "0.1"
 wasm-bindgen = "0.2"
+wasm-bindgen-futures = "0.4"
+wee_alloc = "0.4"
 serde_json = "1.0"
 serde = "1.0"
 gloo = "0.7"
 gloo-console = "0.2"
-web-sys = { version = "0.3", features = ["HtmlInputElement"] }
+web-sys = { version = "0.3", features = [
+    "HtmlInputElement",
+    "NodeList",
+    "HtmlCollection",
+] }
+js-sys = "0.3"
 once_cell = "1"
 parking_lot = "0.12"
 reqwest = { version = "0.11", features = ["json"] }
