--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,8 @@ web-sys = { version = "0.3", features = [
     "HtmlInputElement",
     "NodeList",
     "HtmlCollection",
+    "EventTarget",
+    "HtmlButtonElement",
 ] }
 js-sys = "0.3"
 once_cell = "1"
