--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,8 @@ web-sys = { version = "0.3", features = [
     "HtmlCollection",
     "EventTarget",
     "HtmlButtonElement",
+    "HtmlSelectElement",
+    "HtmlTextAreaElement",
 ] }
 js-sys = "0.3"
 once_cell = "1"
