--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ parking_lot = "0.12"
 reqwest = { version = "0.11", features = ["json"] }
 thiserror = "1"
 dotenv_codegen = "0.15"
+linked-hash-map = "0.5.6"
 
 random-number = "0.1.7"
 getrandom = { version = "0.2.6", features = ["js"] }
