--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -10,7 +10,7 @@
         "ms-ceintl.vscode-language-pack-zh-hans",
         "emmanuelbeziat.vscode-great-icons",
         "usernamehw.errorlens",
-        "gera2ld.markmap-vscode",
+        "techtheawesome.rust-yew",
         "adrianwilczynski.format-selection-as-html"
     ]
 }
