--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,10 @@ edition = "2021"
 [lib]
 crate-type = ["rlib", "cdylib"]
 
+[features]
+# default = ["mock"]
+mock = []
+
 [dependencies]
 yew = "0.19"
 yew-router = "0.16"
@@ -27,4 +31,9 @@ web-sys = { version = "0.3", features = [
     "HtmlTextAreaElement",
 ] }
 pulldown-cmark = "0.9"
-uuid = { version = "1.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
+uuid = { version = "1.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
+reqwest = { version = "0.11", features = ["json"] }
+thiserror = "1"
+dotenv_codegen = "0.15"
+once_cell = "1"
+parking_lot = "0.12"
