--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -4,9 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-[features]
-default = ["mock"]
-mock = []
 
 [dependencies]
 yew = "0.19"
@@ -28,13 +25,9 @@ web-sys = { version = "0.3", features = [
     "HtmlTextAreaElement",
 ] }
 js-sys = "0.3"
-once_cell = "1"
-parking_lot = "0.12"
-reqwest = { version = "0.11", features = ["json"] }
-thiserror = "1"
-dotenv_codegen = "0.15"
 linked-hash-map = "0.5"
 pulldown-cmark = "0.9"
 random-number = "0.1.7"
+include_dir = "0.7"
 getrandom = { version = "0.2.6", features = ["js"] }
-rust-web-server-yew = { path = "../" }
+rust-web-server-yew = { path = "../", features = ["mock"] }
